<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<string name="Notedroid.ApplicationName">NoteDroid</string>
<string name="Notedroid.ApplicationDescription">Notedroid is a note-taking application for Android, based on the Android notepad tutorial. </string>

<string name="NoteList.NoNotes">No notes yet!</string>
<string name="NoteList.MenuDelete">Delete</string>
<string name="NoteList.MenuEditName">Edit name...</string>
<string name="NoteList.MenuShowProperties">Properties...</string>
<string name="NoteList.MenuCreateNote">New note</string>
<string name="NoteList.MenuCreateFolder">New folder</string>
<string name="NoteList.MenuMoveUp">Parent folder</string>

<string name="Commons.Yes">Yes</string>
<string name="Commons.No">No</string>
<string name="Commons.TypeNote">Note</string>
<string name="Commons.TypeFolder">Folder</string>

<string name="AboutDialog.Title">About</string>
<string name="AboutDialog.VersionText">Version:</string>
<string name="AboutDialog.UrlTextValue">http://code.google.com/p/notedroid/</string>
<string name="AboutDialog.LicenseText">License:</string>
<string name="AboutDialog.LicenseTextValue">GPL v3</string>
<string name="AboutDialog.CloseBtn">Close</string>

<string name="PropertiesDialog.Title">Properties</string>
<string name="PropertiesDialog.Name">Name:</string>
<string name="PropertiesDialog.Type">Type:</string>
<string name="PropertiesDialog.CreationDate">Creation date:</string>
<string name="PropertiesDialog.ModificationDate">Modification date:</string>
<string name="PropertiesDialog.CloseBtn">Close</string>

<string name="NameEditor.NameLabel">Name:</string>
<string name="NameEditor.SaveButton">Save</string>
<string name="NameEditor.CancelButton">Cancel</string>
<string name="NameEditor.TitleTextEdit">Edit name:</string>
<string name="NameEditor.TitleTextCreateFolder">Folder name:</string>
<string name="NameEditor.TypeText">Type:</string>
<string name="NameEditor.ModificationDateText">Modification date:</string>
<string name="NameEditor.CreationDateText">Creation date:</string>

<string name="NoteList.DeleteNoteQuestion">Are you sure you want to delete this note?</string>
<string name="NoteList.DeleteFolderQuestion">Are you sure you want to delete this folder (and all its child notes and folders)?</string>

<string name="Main.ViewNotes">View notes</string>
<string name="Main.NewNote">New note</string>
<string name="Main.Preferences">Preferences</string>
<string name="Main.About">About</string>

<string name="NoteEditor.SaveMenu">Save</string>
<string name="NoteEditor.CancelMenu">Cancel</string>

<string name="NameEditor.SaveMenu">Save</string>
<string name="NameEditor.CancelMenu">Cancel</string>

<string name="DATE_FORMAT_ISO8601">yyyy-MM-dd\'T\'HH:mm:ss.SSS</string>

<string name="PreferenceSortCategoryTitle">Sort options</string>

<string name="PreferenceSortModeTitle">Sort mode</string>
<string name="PreferenceSortModeSummary">Specify the sort mode of notes and category.</string>

<string name="PreferenceSortModeName">Name</string>
<string name="PreferenceSortModeModificationDate">Modification date</string>
<string name="PreferenceSortModeCreationDate">Creation date</string>
<string-array name="PreferenceSortMode"><item>@string/PreferenceSortModeName</item>
<item>@string/PreferenceSortModeModificationDate</item>
<item>@string/PreferenceSortModeCreationDate</item>
</string-array>
<string-array name="PreferenceSortModeValues"><item>name</item>
<item>modificationdate</item>
<item>creationdate</item>
</string-array>

<string name="PreferenceDirectionTitle">Sort direction</string>
<string name="PreferenceDirectionSummary">Specify the sort direction of notes and category.</string>

<string name="PreferenceSortDirectionAscending">Ascending</string>
<string name="PreferenceSortDirectionDescending">Descending</string>
<string-array name="PreferenceSortDirection"><item>@string/PreferenceSortDirectionAscending</item>
<item>@string/PreferenceSortDirectionDescending</item>
</string-array>
<string-array name="PreferenceSortDirectionValues"><item>asc</item>
<item>desc</item>
</string-array>
</resources>
